Missed a closing tag.

--- a/index.html
+++ b/index.html
@@ -231,5 +231,6 @@
       <li>Google I/O, 2012: “What’s Next for Chrome Extensions”
         (<a href="https://www.youtube.com/watch?v=x9KOS1VQgqQ">Video</a>)
     </ul>
+  </section>
 </body>
 </html>
